--- a/plugin.xml
+++ b/plugin.xml
@@ -7,7 +7,7 @@
 	<platform name="android">
 		<config-file parent="/*" target="res/xml/config.xml">
 			<feature name="imageCropper">
-				<param name="android-package" value="com.tyrion.plugin.cropper.imageCropper" />
+				<param name="android-package" value="com.tyrion.plugin.cropper" />
 			</feature>
 		</config-file>
 
@@ -16,8 +16,8 @@
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         </config-file>
 
-		<source-file src="src/android/image_cropper_lib.jar" target-dir="libs"/>
-		<source-file src="src/android/imageCropper.java" target-dir="src/com/tyrion/plugin/cropper/imageCropper" />
+		<source-file src="src/android/image-cropper-lib.jar" target-dir="libs"/>
+		<source-file src="src/android/imageCropper.java" target-dir="src/com/tyrion/plugin/cropper" />
 	</platform>
 	<platform name="ios">
 		<config-file parent="/*" target="config.xml">
