--- a/plugin.xml
+++ b/plugin.xml
@@ -7,7 +7,7 @@
 	<platform name="android">
 		<config-file parent="/*" target="res/xml/config.xml">
 			<feature name="imageCropper">
-				<param name="android-package" value="com.tyrion.plugin.cropper" />
+				<param name="android-package" value="com.tyrion.plugin.cropper.imageCropper" />
 			</feature>
 		</config-file>
 
