--- a/plugin.xml
+++ b/plugin.xml
@@ -31,6 +31,7 @@
         <source-file src="src/ios/MLImageCrop.m"/>
         <header-file src="src/ios/Operation.h"/>
         <source-file src="src/ios/Operation.m"/>
+        <header-file src="src/ios/DeviceMacro.h"/>
 	</platform>
 </plugin>
 
